package dev.evestaticmapplanner.localization.en

import dev.evestaticmapplanner.localization.CommonStrings

internal object EnglishCommonStrings : CommonStrings {
    override val ok = "OK"
    override val cancel = "Cancel"
    override val close = "Close"
    override val apply = "Apply"
    override val add = "Add"
    override val clear = "Clear"
    override val remove = "Remove"
    override val update = "Update"
    override val rename = "Rename"
    override val delete = "Delete"
    override val select = "Select"
    override val unavailable = "Unavailable"
    override val on = "On"
...
